fixed pesky kit harrington alignment

--- a/app/static/css/style_1_2.css
+++ b/app/static/css/style_1_2.css
@@ -20,7 +20,8 @@ a {
 
 header {
     height: 65px;
-    padding-bottom: 10px;padding-top: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     grid-area: header;
     display: grid;
     grid-template-columns: 25px auto 1fr auto 25px;
